# dendro-heat

./: CMakeLists.txt  Makefile
include/: DendroIO.h  Exceptions.h  HTEquation.h  HTNodeData.h  OctVTK.h  TalyMat.h  TalyVec.h  TecplotIO.h  TecplotIO_ascii.h  VecIO.h  analytic.h  feMat.h  feMatrix.h  feVec.h  feVector.h  femUtils.h  interp.h  massMatrix.h  nonlinear.h  parabolic.h  rhs.h  stiffnessMatrix.h  timeStepper.h
src/: DendroIO.cpp  DendroIO_plt.cpp  DendroIO_vtk.cpp  OctVTK.cpp  TecplotIO_ascii.cpp  VecIO.cpp  analytic.cpp  femUtils.cpp  interp.cpp  main.cpp  timeStepper.cpp
